--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,7 +10,9 @@
         Category: <%= @item.category %>
         <br>
          <div class="mb-1" >
-
+            
+  				<a href="/cart/<%= @item.id %>" class="btn-secondary">Add to Cart</a> 
+			
         </div>
         <% if session[:login] == 1 %>
         	<a><%= link_to 'Back',  items_path %></a>
