upload code firstname,lastname on profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,9 @@
         
         <div class="shop-icon">
             <a class="" href="" >
+                <%= link_to  "/cart/index" do %>
                  <%= image_tag("Shop.png", alt: "shopping cart") %>
+                 <% end %>
             </a>
         </div>
     </header>
