--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,6 +12,16 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-inputs" %>
   </div>
 
+  <div class="padding">
+    <%= f.label :FirstName %><br />
+    <%= f.email_field :FirstName, autofocus: true, autocomplete: "FirstName" , class:"form-inputs"%>
+  </div>
+          
+  <div class="padding">
+    <%= f.label :LastName %><br />
+    <%= f.email_field :LastName, autofocus: true, autocomplete: "LastName" , class:"form-inputs"%>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
