--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,16 @@
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email" , class:"form-inputs"%>
         </div>
+        
+        <div class="padding">
+            <%= f.label :FirstName %><br />
+            <%= f.email_field :FirstName, autofocus: true, autocomplete: "FirstName" , class:"form-inputs"%>
+        </div>
+        
+        <div class="padding">
+            <%= f.label :LastName %><br />
+            <%= f.email_field :LastName, autofocus: true, autocomplete: "LastName" , class:"form-inputs"%>
+        </div>
 
         <div class="padding">
             <%= f.label :password %>
