text_field on Registration form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,12 +12,12 @@
         
         <div class="padding">
             <%= f.label :FirstName %><br />
-            <%= f.email_field :FirstName, autofocus: true, autocomplete: "FirstName" , class:"form-inputs"%>
+            <%= f.text_field :FirstName, autofocus: true, autocomplete: "FirstName" , class:"form-inputs"%>
         </div>
         
         <div class="padding">
             <%= f.label :LastName %><br />
-            <%= f.email_field :LastName, autofocus: true, autocomplete: "LastName" , class:"form-inputs"%>
+            <%= f.text_field :LastName, autofocus: true, autocomplete: "LastName" , class:"form-inputs"%>
         </div>
 
         <div class="padding">
