--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -39,5 +39,5 @@
 
 
 <p><a href="/items" class="button">Continue Shopping</a></p>
-<a href="/clearcart" class="button">Empty Cart</a>
+<a href="/clearcart" class="button">No items in cart</a>
 
