--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,28 +25,100 @@ body {
     margin: auto;
 }
 
-.border{
+..border{
     border: 1px solid #000;
 }
 
 .margin{
     margin: 20px;
 }
+
 .mt-1{
-    margin-top: 20px;
+     margin-top: 5%;
 }
+
+.ml-1{
+     margin-left: 5%;
+}
+
+.mr-1{
+     margin-right: 5%;
+}
+
 .mb-1{
-    margin-bottom: 20px;
+    margin-bottom: 5%;
 }
-.padding{
-    padding:10px;
+
+.mt-2{
+     margin-top: 15%;
 }
+
+.ml-2{
+     margin-left: 15%;
+}
+
+.mr-2{
+     margin-right: 15%;
+}
+
+.mb-2{
+    margin-bottom: 15%;
+}
+
+.padding-1{
+    margin: 10px;
+}
+
+.pt-1{
+    padding-top: 5%;
+}
+
 .pl-1{
-    padding-left: 10px;
+    padding-left: 5%;
 }
 
 .pr-1{
-    padding-right: 10px;
+    padding-right: 5%;
+}
+
+.pb-1{
+    padding-bottom: 5%;
+}
+
+.pt-2{
+    padding-top: 15%;
+}
+
+.pl-2{
+    padding-left: 15%;
+}
+
+.pr-2{
+    padding-right: 15%;
+}
+
+.pb-2{
+    padding-bottom: 15%;
+}
+
+.pt-3{
+    padding-top: 25%;
+}
+
+.pl-3{
+    padding-left: 25%;
+}
+
+.pr-3{
+    padding-right: 25%;
+}
+
+.pb-3{
+    padding-bottom: 25%;
+}
+
+.pl-4{
+    padding-left: 50%;
 }
 
 h1 { 
@@ -71,7 +143,7 @@ h1 {
 h2{
     text-align: center;
     font-weight: 800;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 h4{
@@ -261,10 +333,10 @@ a.btn-large{
     box-shadow: 1px 1px 2px #675151;
 }
 
-h2 {
+h2{
     text-align: center;
     font-weight: 800;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .product-card{
@@ -301,88 +373,6 @@ a.btn-secondary:hover{
     color:#fff;
     font-weight: 500;
 }
-
-
-/*= Content - Categories
---------------------------------------------------------*/
-
-#itemsContainer {
-    width: 100%;
-    text-align: center;
-}
-
-
-.category-card{
-    width: 320px;
-    background-color: #F1EFEF;
-    margin: 20px 20px;
-    text-align: center;
-    padding: auto;
-    display: inline-block;
-}
-
-
-
-
-
-
-.itemhols {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    
-    width: 22%;
-    padding:10px;
-    min-height: 300px;
-   
-}
-
-
-.itemhols h1 {
-   display: block;
-    color: #4CAF50;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 20px
-    
-}
-
-
-.itemhols p {
-   display: block;
-    color: #4CAF50;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 16px
-    
-}
-
-
-
-.itemholsIm {
-    width: 30%; 
-    margin-left: auto; 
-    margin-right: auto; 
-    display: block;
-    
-}
-
-
-.button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-
 
 /*= Content - forms
 --------------------------------------------------------*/
@@ -446,3 +436,241 @@ input[type=text], select {
     height: 200px;
     display: inline-block;
 }
+
+
+/*= Content - Categories
+--------------------------------------------------------*/
+
+#itemsContainer {
+    width: 100%;
+    text-align: center;
+}
+
+
+.category-card{
+    width: 25%;
+    height: 100%;
+    margin: 20px 20px;
+    text-align: center;
+    padding: auto;
+    background-color: #F1EFEF;
+    box-shadow: 1px 1px 1.5px #675151;
+    border: 1px solid #C7BFBF;
+}
+
+/*= Content - Checkout
+--------------------------------------------------------*/
+#checkout-products {
+    border-collapse: collapse;
+    width: 60%;
+    border-radius: 2px;
+    background-color: #F1EFEF;
+    box-shadow: 1px 1px 1.5px #675151;
+    border: 1px solid #C7BFBF;
+    margin-right: 30px;
+}
+
+#checkout-products td, #checkout-products th {
+    border-bottom: 1px solid #ddd;
+    padding: 15px 30px;
+}
+
+#checkout-products tr:nth-child(even){
+    background-color: #F1EFEF;
+}
+
+#checkout-products tr:hover {
+    background-color: #d7d3d2;
+}
+
+#checkout-products th {
+    font-weight: 500;
+    font-size: 1.3rem;
+    text-align: center;
+    color: #fff;
+    padding: 10px;
+    background-color: #230D0C;
+    border-bottom: 2px solid #fff;
+}
+
+.img-table{
+    width: 40%;
+    margin-right: 15px;
+    margin-top: 25px;
+}
+
+.description-table{
+    width: 50%;
+    text-align: left;
+}
+
+.payment-box{
+    width: 25%;
+}
+
+.payment-card{
+    width: 100%;
+    height: 250px;
+    padding: 10px;
+    border-radius: 2px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #F1EFEF;
+    box-shadow: 1px 1px 1.5px #675151;
+    border: 1px solid #C7BFBF;
+}
+
+select {
+    font-size: .9rem;
+    font-weight: 200;
+    width: 100%;
+    padding: 10px 20px;
+    border: 1px solid #C7BFBF;
+    border-radius: 2px;
+    background-color: #fff;
+    margin: auto;
+}
+
+a.btn-large-secondary{
+    background-color: #230D0C;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin: 0px;
+    padding: 15px 100px;
+    border-radius: 4px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    box-shadow: 1px 1px 2px #675151;
+}
+
+a.btn-large-secondary:hover{
+    background-color: #664B4B;
+    color:#fff;
+    font-weight: 500;
+}
+
+/*
+.itemhols {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    
+    width: 22%;
+    padding:10px;
+    min-height: 300px;
+   
+}
+
+
+.itemhols h1 {
+   display: block;
+    color: #4CAF50;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px
+    
+}
+
+
+.itemhols p {
+   display: block;
+    color: #4CAF50;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 16px
+    
+}
+
+
+
+.itemholsIm {
+    width: 30%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    display: block;
+    
+}
+
+
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+*/
+
+
+/*= Content - Product
+--------------------------------------------------------*/
+.product-img{
+    width: 40%;
+    height: 20%;
+    display: inline-block;
+    padding: 10px;
+    border: 1px solid #C7BFBF;
+    margin-right: 30px;
+}
+
+
+.product-details-card{
+    width: 30%;
+    height: 100%;
+    margin: 0px;
+    padding: 10px;
+    border-radius: 2px;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #F1EFEF;
+    box-shadow: 1px 1px 1.5px #675151;
+    border: 1px solid #C7BFBF;
+}
+
+.product-name{
+    border-bottom: 5px dotted #230D0C;
+}
+
+.sizes-units{
+    width: 60%;
+    font-size: 1rem;
+    font-weight: 200;
+}
+
+.quantity-input{
+    font-size: .9rem;
+    font-weight: 200;
+    padding: 5px;
+    width: 40%;
+    height: 20%;
+}
+
+.box-price{
+    display: block;
+    border-bottom: 5px dotted #230D0C;
+    margin-bottom: 20px;
+}
+
+.price-text{
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-align: center;
+    margin: 0px 0px 10px;
+}
+
+
+
+
+
+
