--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -3,41 +3,80 @@
 <%end%>
 
 
-<h1> Purchase</h1>
-<div id="itemsContainer">
-    <table id="customers">
+<h1 class="tex-center"> Checkout </h1>
+<section id="itemsContainer" class="container mb-1">
+    <table id="checkout-products">
+        <tr>
+            <th>Product</th>
+            <th>Quantity</th>
+            <th>Price</th>
+        </tr>
         <% total = 0 %>
         <% @cart.each do |id, quantity| %>
-        
         <% item = Item.find_by_id(id) %>
-        
         <tr>
-            <td>
-                <div class="image">
-                    <%= link_to (image_tag item.image_url, :style =>"height:40px"), item %>
+            <td class="flex-container">
+                <div class="img-table">
+                     <%= link_to (image_tag item.image_url, :class => 'img'), item %>
                 </div>
-                
+                <div class="description-table">
+                    <h2 class="text-left"><%= link_to item.title, item %></h2>
+                    <h3> Allergen Information:</h3>
+                    <p class="text-justify">  Gluten (Wheat), Eggs, Milk, Sulphites</p>
+                    <a href="/cart/remove/<%= item.id %>" class="mt-1">Remove from Cart</a>
+                </div>
             </td>
-            
-            <td class="title"><%= link_to item.title, item %></td>
-            <td><a href="/cart/remove/<%= item.id %>">Remove From Cart</a></td>
-            <td class="price"><%= number_to_currency(item.price, :unit =>"€") %></td>
-            <td class="quantity"><%= quantity %></td>
-            <td class="quantity"><a href="/cart/decrease/<%= item.id %>">Decrease</a></td>
-            <td class="price"><%= number_to_currency(quantity * item.price, :unit =>"€") %></td>
-            
+            <td>
+                <%= quantity %>
+                <a href="/cart/decrease/<%= item.id %>">Decrease</a>
+            </td>
+            <td>
+                <h4 class="text-center">
+                    <%= number_to_currency(quantity * item.price, :unit =>"€") %>
+                </h4>
+            </td>
         </tr>
-        
-            <% total += quantity * item.price %>
-         <% end %>
-         <tr>
-            Grang Total: <%= number_to_currency(total, :unit => "€") %>
-          </tr>
-           
+        <% total += quantity * item.price %>
+        <% end %>
+            
     </table>
+    <div class="payment-box">
+        <div class="payment-card">
+            <h2 class="text-center product-name mb-1 pb-1">Choose Location</h2>
+            <form action="/action_page.php">
+                <select name="location" class="mt-1">
+                    <option value="location1">location1</option>
+                    <option value="location2">location2</option>
+                    <option value="location3">location3</option>
+                </select>
+            </form>
+        </div>
+        <div class="payment-card mt-2 pb-2">
+            <h2 class="text-center product-name mb-1 pb-1">Cart Total</h2>
+            <h3 class="price-text mb-1">
+                <%= number_to_currency(total, :unit => "€") %>
+            </h3>
+            <a href="" target="" class="btn-large " role="button" aria-pressed="true">
+                CHECKOUT
+            </a>   
+        </div>
     </div>
+</section>
+<section class="container mb-1">
+    <div class="mr-1">
+        <a href="/items" target="" class="btn-primary" role="button" aria-pressed="true">
+            CONTINUE SHOPPING
+        </a>
+    </div>
+    <div class="mr-1">
+        <a href="/cart/clear" target="" class="btn-secondary" role="button" aria-pressed="true">
+            EMPTY CART
+        </a>
+    </div>  
+</section>
+    
 
 
-<p><a href="/items" class="button">Continue Shopping</a></p>
-<a href="/clearcart" class="button">No items in cart</a>
+
+
 
