--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,23 +1,54 @@
 <p id="notice"><%= notice %></p>
 
+<h1 class="tex-center"><%= @item.category %></h1>
 <section class="container margin">
-    <div class="category-card">
-        <h1><%= @item.title %></h1>
-        <%= image_tag @item.image_url, :class => 'img'  %>
-        <p class="text-justify"><%= @item.description %></p>
-        <h3>Price <%= number_to_currency(@item.price, :unit => "€") %> </h3>
-        <br>
-        Category: <%= @item.category %>
-        <br>
-         <div class="mb-1" >
-            
-  				<a href="/cart/<%= @item.id %>" class="btn-secondary">Add to Cart</a> 
-			
+    <div class="product-img">
+        <%= image_tag @item.image_url, :class => 'img'%>
+    </div>
+    <div class="product-details-card">
+        <div class="product-name">
+            <h2><%= @item.title %></h2>
         </div>
-        <% if session[:login] == 1 %>
-        	<a><%= link_to 'Back',  items_path %></a>
-			<a><%= link_to 'Edit',  edit_item_path(@item) %></a>
-		<% end %>
+        <div class="">
+            <h3> Description:</h3>
+            <p class="text-justify"><%= @item.description %></p>
+            <h3> Allergen Information:</h3>
+            <p class="text-justify">  Gluten (Wheat), Eggs, Milk, Sulphites</p>
+        </div>
+        <form class="">
+            <div class="flex-container">
+                <div class="sizes-units">
+                    <h3>Cakes sizes</h3>
+                    <label class="ml-1"> <input type="radio" name="cake-size" value = "6'" class="mr-1 mb-1" checked> 8-10 Portions</label>
+                    <br/>
+                    <label  class="ml-1"><input type="radio" name="cake-size" value="8'" class="mr-1 mb-1">12-14 Portions</label>
+                    <br/>
+                    <label  class="ml-1"><input type="radio" name="cake-size" value="9'" class="mr-1 mb-1">16-18 Portions</label>
+                    <br/>
+                    <label  class="ml-1"><input type="radio" name="cake-size" value="10'" class="mr-1 mb-1">20-22 Portions</label>
+                    <br/>
+                </div>
+                <div class="">
+                    <h3>Quantity</h3>
+                    <input type="number" name="quantity" min="1" max="100" class="quantity-input">
+                </div>
+            </div>
+            <div class="box-price">
+                <h3 class="text-left">Price</h3>
+                <h4 class="price-text"><%= number_to_currency(@item.price, :unit => "€") %></h4>
+            </div>
+            <div class="pl-1">
+                <a href="/cart/<%= @item.id %>" class="btn-large">
+                    ADD TO CART
+                </a>
+            </div>
+            <div class="pl-1">
+                <% if session[:login] == 1 %>
+                    <a><%= link_to 'Back',  items_path %></a>
+                    <a><%= link_to 'Edit',  edit_item_path(@item) %></a>
+                <% end %>
+            </div>
+        </form>
     </div>
 </section>
 
