updatind order and payment process

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -56,7 +56,7 @@
             <h3 class="price-text mb-1">
                 <%= number_to_currency(total, :unit => "€") %>
             </h3>
-            <a href="" target="" class="btn-large " role="button" aria-pressed="true">
+            <a href="/checkout/" target="" class="btn-large " role="button" aria-pressed="true">
                 CHECKOUT
             </a>   
         </div>
