--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,8 +1,9 @@
 body {
-  font-family: 'Raleway', sans-serif;
-  color: #230D0C;
   background-color: #fff;
-  margin: 0;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
   margin: 33px;
 }
 
@@ -21,11 +22,9 @@ pre {
 
 a {
   color: #000;
-  font-weight: 800;
 
   &:visited {
-    color: #664B4B;
-    font-weight: 800;
+    color: #666;
   }
 
   &:hover {
