--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,7 +14,7 @@
 			<% end %>
             <%= link_to 'SHOW',  item, :class => "btn-secondary", :role => "button" %>
         </div>
-        <% if session[:login] == 1 %>
+        <% if admin_user? %>
         	<a><%= link_to 'Edit', edit_item_path(item) %></a>
 			<a><%= link_to 'Destroy',  item, method: :delete, data: { confirm: 'Are you sure?' } %></a>
 		<% end %>
