--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,7 +27,7 @@
 	<% end %>
 </section>
 
-<% if session[:login] == 1 %>
+<% if admin_user? %>
 	<a><%= link_to 'New Category', new_category_path %> </a>
 <% end %>
 
