--- a/app/views/layouts/_application.html.erb
+++ b/app/views/layouts/_application.html.erb
@@ -16,7 +16,13 @@
             <%= link_to image_tag("Cakes-O'clock-logo.png", alt: "Cakes O'clock logo"), "/" %>
         </figure>
         <form class="form-search">
-            <input type="text" name="search" placeholder="Search..">
+            <%= form_tag("/search", :method => "post") do %>
+            <%= label_tag(:q, "Search for:") %>
+            <%= text_field_tag(:q) %>
+            <%= submit_tag("Search") %>
+        <% end %>
+         <%=render partial:'layouts/search'%>
+         
         </form>
         
         <div class="login">
