--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <table class="catalog">
-  <% @itemss.each do |item| %>
+  <% @items.each do |item| %>
       <tr>
         <td>
           <div class="image">
