--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -26,7 +26,7 @@
 
 <br>
 
-<% if session[:login] == 1 %>
+<% if admin_user?%>
 	<a><%= link_to 'New Category', new_category_path %> </a>
 <% end %>
 
