--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', category: @category %>
 
-<%= link_to 'Back', categories_path %>
+<div class="container margin">
+	<a><%= link_to 'Back', categories_path, :class =>"btn-admin" %> </a>
+</div>
