--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Image:</strong>
-  <%= @category.image %>
-</p>
+<h1 class="text-center" >Categories</h1>
+<section class="container margin">
+    <div class="form-card padding-1">
+        <h2  class="text-left">Title:</h2>
+        <h3 class="text-center"><%= @category.title %></h3>
+        <h2  class="text-left">Image:</h2>
+        <div class="img-table">
+            <%= image_tag @category.image, :class=>"img" %>
+        </div>
+    </div>
+</section>
 
-<p>
-  <strong>Title:</strong>
-  <%= @category.title %>
-</p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<div class="container margin">
+	<a><%= link_to 'Edit', edit_category_path(@category), :class =>"btn-admin" %></a>
+	<a><%= link_to 'Back', categories_path, :class =>"btn-admin" %> </a>
+</div>
