--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -28,7 +28,9 @@
 </section>
 
 <%if admin_user?%>
-	<a><%= link_to 'New Category', new_category_path %> </a>
+	<div class="container margin">
+		<a><%= link_to 'New Category', new_category_path, :class =>"btn-admin" %> </a>
+	</div>
 <% end %>
 
 
