order process and css

--- a/app/views/cart/createOrder.html.erb
+++ b/app/views/cart/createOrder.html.erb
@@ -1,48 +1,57 @@
 <div id="itemsContainer">
-    <h1>Thank You<br>You have just placed an order.</h1>
+    <h1 class="tex-center" >Thank You, You have just placed an order.</h1>
 </div>
 
-<table class="checkout-products">
-    <tr>
-         
-        <% @orders.limit(1).order(id: :desc).each do |order| %>
-       <td>Order reference for the order you just placed is OrderNumber: <b><%= order.id %></b></td>
-        <% end %>
-    </tr>
-</table>    
-    
-    
-<table id="customers" class="checkout-products">
-     <% @total = 0 %>
-    <% @orderitems.each do |id,quantity| %>
-      <tr>
-        <% item = Orderitem.find_by_id(id) %>
-        <td><%= item.title %></td>
-        <td><%= item.quantity %></td>
-       <td><%=number_to_currency(item.price, :unit => "€")%></td> 
-       <td><%= number_to_currency(item.quantity * item.price, :unit => "€") %></td>
-       </tr>
-       
-       <% timx = (item.quantity * item.price)%> 
-       <% @total += timx %>
-      
-      </tr>
-    <% end %>
-    
-    
-    <tr>
-       <td>Order Total: &euro; <%= @total %></td>
-      </tr>
-      
-      <td>Order Total: &euro; <%= @total %></td>
-       
-<% shipping = 30 %>
-      <% @overall = shipping + @total%>
-      <tr>
-          <td>Shipping &euro;30</td>
-          <td>You Pay &euro; <%= @overall %></td>
-      </tr>
-    <tr>
-          <td><h2>  <a href="/paid/<%= @order.id %>" class="button">Pay Now</a></h2></td>
-      </tr>
-</table>
+<section class="flex-container margin">
+    <div class="form-card padding-1">
+        <table class="checkout-products box-price">
+            <tr>
+                <% @orders.limit(1).order(id: :desc).each do |order| %>
+               <td>
+                   <h2>Order reference for the order you just placed is OrderNumber: 
+                   <%= order.id %></h2>
+                </td>
+                <% end %>
+            </tr>
+        </table>
+   
+        <table id="customers" class="flex-container ">
+            <tr>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Amount</th>
+            </tr>
+            <% @total = 0 %>
+            <% @orderitems.each do |id,quantity| %>
+            <tr>
+            <% item = Orderitem.find_by_id(id) %>
+                <td>
+                    <h3> <%= item.title %> </h3>
+                </td>
+                <td>
+                    <p class="text-center"><%= item.quantity %></p>
+                </td>
+                <td>
+                    <p class="text-center"> <%=number_to_currency(item.price, :unit => "€")%> </p>
+                </td> 
+                <td>
+                    <p class="text-center"> <%= number_to_currency(item.quantity * item.price, :unit => "€") %> </p>
+                </td>
+                <% timx = (item.quantity * item.price)%> 
+                <% @total += timx %>
+            <% end %>
+            <tr>
+                <td  class="float-right product-name">
+                    <h2 class="product-name mb-1 pb-1">Order Total</h2>
+                    <h3 class="price-text mb-1"> &euro; <%= @total %></h3>
+                </td>
+            </tr>
+        </table>
+        <div  class="card-container">
+            <a href="/paid/<%= @order.id %>" class="btn-large" role="button" aria-pressed="true">
+                PAY NOW
+            </a>
+        </div>
+    </div> 
+</section>
