--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -28,4 +28,9 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
+
+
+<div class="container margin">
+	<a><%= link_to 'New Order', new_order_path, :class =>"btn-admin" %></a>
+	<a href="/checkout" class="btn-admin">Checkout</a>
+</div>
