--- a/app/views/static_pages/paid.html.erb
+++ b/app/views/static_pages/paid.html.erb
@@ -1,4 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 
-<h1> You have sucessfulled paid </h1>
+<section class="container margin">
+    <div class="form-card padding-1">
+        <h1 class="bottom-dotted"> You have sucessfulled paid </h1>
+    </div>
+</section>
+<section class="container mb-1">
+    <div class="mr-1">
+        <a href="/items" target="" class="btn-primary" role="button" aria-pressed="true">
+            CONTINUE SHOPPING
+        </a>
+    </div>
+</section>
