--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,5 @@
 <section class="container margin">
-    <div class="form-card">
+    <div class="form-card padding-1">
 	<%= form_for(item) do |f| %>
 		<% if item.errors.any? %>
 		<div id="error_explanation">
