--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+<div class="container margin">
+	<a><%= link_to 'Show', @item, :class =>"btn-admin" %></a>
+	<a><%= link_to 'Back', items_path, :class =>"btn-admin" %> </a>
+</div>
+
