--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,17 +6,17 @@
 	<div class="category-card">
         <%= link_to (image_tag item.image_url, :class => "img"), item %>
         <h2><%= item.title %></h2>
-        <p class="text-justify"><%= item.description %></p>
+        <div class="text-justify pl-1">
+            <p class="text-justify"><%= item.description %></p>
+        </div>
+        
         <h3>Price <%= number_to_currency(item.price, :unit => "€") %> </h3>
         <div class="mb-1" >
-            <% if user_signed_in? %>
-  				<a href="/cart/<%= item.id %>" class="btn-secondary">Add to Cart</a> 
-			<% end %>
             <%= link_to 'SHOW',  item, :class => "btn-secondary", :role => "button" %>
         </div>
         <% if admin_user? %>
-        	<a><%= link_to 'Edit', edit_item_path(item) %></a>
-			<a><%= link_to 'Destroy',  item, method: :delete, data: { confirm: 'Are you sure?' } %></a>
+        	<a><%= link_to 'Edit', edit_item_path(item), :class =>"btn-admin" %></a>
+			<a><%= link_to 'Destroy',  item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"btn-admin"%></a>
 		<% end %>
     </div>
 	<% end %>
