--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'Back', items_path %>
+<div class="container margin">
+	<a><%= link_to 'Back', items_path, :class =>"btn-admin" %> </a>
+</div>
