add products and imgs

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="tex-center" >Categories</h1>
-<section class="container margin">
+<section class="card-container margin">
     <div class="form-card padding-1">
         <table>
             <thead>
