--- a/app/views/static_pages/category.html.erb
+++ b/app/views/static_pages/category.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<section class="container margin">
+<section class="card-container margin">
     <% @items.each do |item| %>
     <div class="category-card">
         <%= link_to (image_tag item.image_url, :class => "img"), item %>
