--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -1,37 +1,31 @@
-<h2>You Searched Our Product Catalog For <%= @search_term %></h2>
+<h2 class="text-center">You Searched Our Product Catalog For <%= @search_term %></h2>
 
 <% if @items.length == 0  %>
-<br />
-<h2>No products were found to match your search</h2>
+    <br />
+    <h2 class="text-center">No products were found to match your search</h2>
 <% end %>
 
-
-<table class="catalog">
-  <% @items.each do |item| %>
-      <tr>
-        <td>
-          <div class="image">
-            <%= link_to (image_tag item.image_url, :style => "height:100px"), item %>
-          </div>
-          <div class="title">
-            <%= link_to item.title, item %>
-          </div>
-          <div class="description">
-            <%= item.description %>
-          </div>  
-          <div class="price">
-             <%= number_to_currency(item.price, :unit => "€") %>
-          </div>
-          <div class="links">
-            <% if user_signed_in? %>
-              <%= link_to 'Edit', edit_item_path(item) %>
-              <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
-            <%else%>
-            
-              <a href="/cart/<%= item.id %>">Add to Cart</a>
-            <%end%>  
+<section class="card-container margin">
+    <% @items.each do |item| %>
+        <div class="category-card">
+            <%= link_to (image_tag item.image_url, :class => "img"), item %>
+            <div class="title">
+                <%= link_to item.title, item %>
+            </div>
+            <div class="description">
+                <%= item.description %>
+            </div>  
+            <div class="price">
+                <%= number_to_currency(item.price, :unit => "€") %>
+            </div>
+            <div class="links">
+                <% if user_signed_in? %>
+                    <%= link_to 'Edit', edit_item_path(item), :class =>"btn-admin" %>
+                    <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class =>"btn-admin" %>
+                <%else%>
+                <a href="/cart/<%= item.id %>">Add to Cart</a>
+                <%end%>  
+            </div>
         </div>
-        </td>
-      </tr>
     <% end %>
-</table>
+</section>
