--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div class="pl-1">
-            <% if session[:login] == 1 %>
+            <% if admin_user? %>
                 <a><%= link_to 'Back',  items_path %></a>
                 <a><%= link_to 'Edit',  edit_item_path(@item) %></a>
             <% end %>
